--- a/2-checkout/package.json
+++ b/2-checkout/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "underscore": "^1.13.6",
     "uuid": "^8.3.2",
     "webpack": "^5.41.0",
     "webpack-cli": "^4.7.2"
